[tool.poetry]
name = "snake"
version = "0.1.0"
description = ""
authors = ["Nathan Mornand <nathanlouis.mornand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
serpent = "snake.Serpent:serpent"
game = "snake.jeu:game"
